--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,93 +4,106 @@
     android:id="@+id/activity_registration"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
     tools:context="com.css.cssapp.RegistrationActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="User Name"
-        android:ems="10"
-        android:id="@+id/registerUserName"
-        android:layout_below="@+id/registerLastName"
-        android:layout_alignStart="@+id/registerLastName"
-        android:layout_marginTop="27dp" />
-
-    <EditText
-        android:id="@+id/registerLastName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/registerFirstName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:ems="10"
-        android:hint="Experience?"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/registerFirstName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/registerLastName"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="31dp"
-        android:ems="10"
-        android:hint="Full Name"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:text="Register for an Account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:textSize="24sp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:ems="10"
-        android:id="@+id/registerPassword"
-        android:layout_below="@+id/registerUserName"
-        android:layout_alignStart="@+id/registerUserName"
-        android:layout_marginTop="17dp" />
+        <EditText
+            android:id="@+id/registerUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/registerSkills"
+            android:layout_below="@+id/registerSkills"
+            android:layout_marginTop="27dp"
+            android:ems="10"
+            android:hint="User Name"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
 
-    <Button
-        android:text="REGISTER"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/register"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        <EditText
+            android:id="@+id/registerSkills"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/registerFullName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21dp"
+            android:ems="10"
+            android:hint="Experience?"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/registerPassword"
-        android:layout_below="@+id/registerPassword"
-        android:layout_marginTop="30dp"
-        android:checked="false"
-        android:text="creator" />
+        <EditText
+            android:id="@+id/registerFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/registerSkills"
+            android:layout_below="@+id/textView3"
+            android:layout_marginTop="37dp"
+            android:ems="10"
+            android:hint="Full Name"
+            android:inputType="textPersonName"
+            android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Collaborator"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:visibility="visible"
-        android:layout_alignBaseline="@+id/switch1"
-        android:layout_alignBottom="@+id/switch1"
-        android:layout_toEndOf="@+id/switch1" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Register for an Account"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/registerPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/registerUserName"
+            android:layout_below="@+id/registerUserName"
+            android:layout_marginTop="17dp"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="REGISTER"
+            android:layout_below="@+id/switch1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="59dp" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/registerPassword"
+            android:layout_below="@+id/registerPassword"
+            android:layout_marginTop="41dp"
+            android:checked="false"
+            android:text="Collaborator" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/switch1"
+            android:layout_alignBottom="@+id/switch1"
+            android:layout_toEndOf="@+id/switch1"
+            android:text="Creator"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
